--- a/static/styles/frame.css
+++ b/static/styles/frame.css
@@ -1586,7 +1586,7 @@ textarea::-ms-input-placeholder {
 }
 
 .content {
-  background-color: #005500;
+  background-color: #ebebeb;
   /* min-height: 100vh; */
 }
 
